--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
   },
   "homepage": "https://github.com/ShenyiCui/express-postgres-template#readme",
   "dependencies": {
+    "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
+    "jsonwebtoken": "^9.0.0",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
@@ -46,6 +48,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/node": "^18.11.19",
     "gts": "^3.1.1",
     "sequelize-cli": "^6.6.0",
