--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "express": "^4.18.2",
     "google-auth-library": "^8.7.0",
     "jsonwebtoken": "^9.0.0",
+    "multer": "^1.4.5-lts.1",
     "pg": "^8.9.0",
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.28.0"
@@ -49,6 +50,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.1",
+    "@types/multer": "^1.4.7",
     "@types/node": "^18.11.19",
     "gts": "^3.1.1",
     "sequelize-cli": "^6.6.0",
