:bug: fix: change db_name in env_example

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ DB_PORT=5432
 DB_HOST='localhost'
 DB_USERNAME=''
 DB_PASSWORD=''
-DB_NAME='hopehire-db'
+DB_NAME='sustainability-db'
 SALT_ROUNDS=''
 TOKEN_SECRET=''
 FRONTEND_BASEURL='http://localhost:3000'
