--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "homepage": "https://github.com/ShenyiCui/express-postgres-template#readme",
   "dependencies": {
+    "@google-cloud/storage": "^6.9.4",
     "axios": "^1.3.4",
     "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
