--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -22,4 +22,4 @@ jobs:
         with:
           node-version: 18
       - run: npm install --frozen-lockfile
-      - run: npm build
+      - run: npm run build
